--- a/src/app.pcss
+++ b/src/app.pcss
@@ -29,6 +29,7 @@
 		--secondary-foreground: 220.9 39.3% 11%;
 
 		--accent: 220 14.3% 95.9%;
+		--hover: 216 100% 50%;
 		--accent-foreground: 220.9 39.3% 11%;
 
 		--destructive: 0 72.2% 50.6%;
